--- a/KMLD.html
+++ b/KMLD.html
@@ -19,23 +19,24 @@
         <li>假面騎士空我》(原题:仮面ライダークウガ)是日本朝日电视台及东映株式会社联合制作、播映的特摄剧集。</li> 
         <li>于2000年(平成12年)1月30日至2001年(平成13年)1月21日,在朝日电视台每周日早上08:00-08:30播出,共49集与一部新春特别篇,为《假面騎士系列》的第1部平成系列作品,也是20世纪最后一部假面騎士作品,以及首部横跨两个世纪的假面騎士作品。</li> 
     </ul>
-    <h2>重要事件</h2> 
-    <ul>
-        <li>香港于2002年3月2日至2002年9月14日在亚洲电视本港台以《幪面超人古迦》译名播出</li> 
-        <li>于每周六、周日19:30-20:30播出两集。台湾则在2003年8月31日至11月23日期间,以《假面超人酷賈》译名由八大戏剧台于每周六、日11:00-12:00播出两集。</li> 
-    </ul>
+    <section>
+        <h2>重要事件</h2>
+        <ul>
+            <li>香港于2002年3月2日至2002年9月14日在亚洲电视本港台以《幪面超人古迦》译名播出</li> 
+            <li>于每周六、周日19:30-20:30播出两集。台湾则在2003年8月31日至11月23日期间,以《假面超人酷賈》译名由八大戏剧台于每周六、日11:00-12:00播出两集。</li> 
+        </ul>
+    </section>
     <h2>
         主要成就和荣誉
     </h2>
-    <ul>
+    <ol>
         <li>本作并于2002年获颁第33届日本“星云赏”电影戏剧部门・媒体部门奖,是首部也是目前唯一获得此奖的假面騎士。</li>  
-    </ul>
+    </ol>
     <h2>
         图片
     </h2>
         <div>
             <img width="400" src="https://www.img.xz95.top/img/wikipedia/zh/9/98/KamenRiderKuuga-title.jpg" alt="">
         </div>
-    
 </body>
 </html>
